[package]
name = "fltk-build"
version = "0.1.0"
edition = "2018"
authors = ["MoAlyousef <mohammed.alyousef@neurosrg.com>"]
description = "Create native fltk/cfltk modules to be used from Rust"
repository = "https://github.com/fltk-rs/fltk-build"
documentation = "https://docs.rs/fltk-build"
keywords = ["gui", "widgets", "graphics"]
categories = ["gui"]
readme = "README.md"
license = "MIT"

[features]
no-pango = []
no-gdiplus = []
